Bug 132094 - FILESAVE DOC images/frames assigned a white area fill during export instead of none
Summary: FILESAVE DOC images/frames assigned a white area fill during export instead o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.0.0
Keywords:
: 48710 106561 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-14 09:12 UTC by Justin L
Modified: 2023-05-24 19:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2020-04-14 09:12:44 UTC
In this doc file (attachment 122056 [details]), a large, mostly transparent image covers the entire page.  Because it is transparent, the text behind can be seen.

During export, the image is assigned a white fill (instead of none), and so on import the image's background fill now covers the text behind.

The same thing is happening with the frames of the two table in this document.

This happens as far back as I can test with bibisect 43all (LO 3.5).

I expect that a solid fill was added to every frame on export based on this old 2002 commit. https://cgit.freedesktop.org/libreoffice/core/commit/?id=ed8b5f2debac216243930aba0873e0d75de8d0dd

Caolán McNamara  on 2002-09-19 12:54:59 +0000
commit ed8b5f2debac216243930aba0873e0d75de8d0dd
#99657# handle no fill correctly for export


1.) Open LO Certificate Master.doc. Select the image (easy to do since it covers almost the entire page) and look at area properties. Notice Area fill is NONE.
2.) Save and reopen the document. Notice that a lot of text is "missing". Notice that the image's area fill is now color white. The same is true for the table frames.
3.) Delete the image and you will see that it was just hiding the text.
Comment 1 Justin L 2020-04-14 09:44:03 UTC
In bug 69407 comment 8, Caolán McNamara provided  attachment 86144 [details] as a test case that must not be broken.
Comment 2 Justin L 2020-04-14 17:51:30 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/92215
Comment 3 Commit Notification 2020-04-16 17:55:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38e7e6f348df5d6b37d7e0051fd3b8c227db69e6

tdf#132094 doc: fix export of fill in wrap-through fly frames

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Justin L 2020-06-16 18:31:30 UTC
*** Bug 48710 has been marked as a duplicate of this bug. ***
Comment 5 Justin L 2023-05-24 19:23:53 UTC
*** Bug 106561 has been marked as a duplicate of this bug. ***