sw/source/filter/ww8/wrtw8esh.cxx
@@ -2026,10 +2026,12 @@ sal_Int32 SwBasicEscherEx::WriteFlyFrameAttr(const SwFrameFormat& rFormat,
 
     // SwWW8ImplReader::Read_GrafLayer() imports these as opaque
     // unconditionally, so if both are true, don't export the property.
-    bool bIsInHeader = sw::IsFlyFrameFormatInHeader(rFormat);
-    bool bIsThrought = rFormat.GetSurround().GetValue() == css::text::WrapTextMode_THROUGH;
+    const bool bIsInHeader = sw::IsFlyFrameFormatInHeader(rFormat);
+    const bool bIsThrough = rFormat.GetSurround().GetValue() == css::text::WrapTextMode_THROUGH;
 
-    if (bIsInHeader)
+    // Anything (like a transparent image) that allows text to wrap through should not force a non-transparent background,
+    // and neither should the commonly seen backgrounds anchored in headers.
+    if (bIsInHeader || bIsThrough)
     {
         std::shared_ptr<SvxBrushItem> aBrush(rFormat.makeBackgroundBrushItem());
 
@@ -2040,6 +2042,7 @@ sal_Int32 SwBasicEscherEx::WriteFlyFrameAttr(const SwFrameFormat& rFormat,
     }
     else
     {
+        // for unknown reasons, force exporting a non-transparent background on fly frames.
         std::shared_ptr<SvxBrushItem> aBrush(rWrt.TrueFrameBgBrush(rFormat));
 
         if(aBrush)
@@ -2051,7 +2054,7 @@ sal_Int32 SwBasicEscherEx::WriteFlyFrameAttr(const SwFrameFormat& rFormat,
     const SdrObject* pObj = rFormat.FindRealSdrObject();
 
     if( pObj && (pObj->GetLayer() == GetHellLayerId() ||
-        pObj->GetLayer() == GetInvisibleHellId() ) && !(bIsInHeader && bIsThrought))
+        pObj->GetLayer() == GetInvisibleHellId() ) && !(bIsInHeader && bIsThrough))
     {
         rPropOpt.AddOpt( ESCHER_Prop_fPrint, 0x200020 );
     }
